[package]
name = "morse_rsdk"
version = "0.1.0"
edition = "2021"

[dependencies]
# HAL and board support - use exact versions
rp2040-hal = { version = "=0.10.2", features = ["rt", "defmt", "critical-section-impl"] }
rp-pico = "=0.9.0"

# Critical section handling - use u8 which is most compatible
critical-section = { version = "=1.2.0", features = ["restore-state-u8"], default-features = false }

# Other dependencies
rp2040-pac = "=0.6.0"
rp2040-boot2 = "=0.3.0"
panic-halt = "=0.2.0"
panic-probe = "=0.3.0"
defmt = "=1.0.1"
defmt-rtt = "=1.0.0"
rtt-target = "0.5.0"
cortex-m = "=0.7.6"
cortex-m-rt = "=0.7.3"
cortex-m-semihosting = "0.5"
embedded-hal = "=1.0.0"
embedded-hal-async = "=1.0.0"
embedded-hal-bus = { version = "=0.2.0", features = ["defmt-03"] }
embedded_hal_0_2 = {package = "embedded-hal", version = "0.2.5", features = ["unproven"]}
embedded-io = "=0.6.1"
embedded-time = "=0.12.1"
portable-atomic = {version = "1.7.0", features = ["critical-section"]}
heapless = { version = "=0.8.0", default-features = false }
nb = "=1.1.0"

# USB related - IMPORTANT: Fixed to specific versions to avoid mismatches
usb-device = "0.3.1"
usbd-serial = "0.2.0"

[[bin]]
name = "transmitter"
path = "src/bin/transmitter.rs"

[[bin]]
name = "receiver"
path = "src/bin/receiver.rs"

[[bin]]
name = "benchmarks"
path = "src/bin/benchmarks.rs"

[lib]
name = "morse_rsdk"
path = "src/lib.rs"


[features]
default = []
test = []
miri = ["test"]

[profile.dev]
debug = 1  # Set to false for max performance
opt-level = 0  # The highest optimization level (0-3)
lto = "thin"    # Link-time optimization (more aggressive than "true")
codegen-units = 1  # Slower compile but better optimization

[profile.release]
debug = 1  # Set to false for max performance
opt-level = 0
lto = "thin"    # Link-time optimization (more aggressive than "true")
codegen-units = 1  # Slower compile but better optimization
